# djrepo

./: build.sh  pyproject.toml  requirements.txt
.github/workflows/: django.yml  react.yml
backend/main/: tests.py
frontend/src/: App.test.jsx
mysite/: settings.py
