[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.2",
    "faker==40.1.2",
    "pillow==12.1.0",
    "psycopg-binary>=3.3.2",
    "psycopg2-binary==2.9.11",
    "whitenoise[brotli]",
    "dj-database-url",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
